# watermark

./: .isort.cfg  .pre-commit-config.yaml  LICENSE  README.md  config.py  pyproject.toml  train.py
notebooks/: add_watermark.ipynb  dataloaders.ipynb  download_images.ipynb  test.ipynb  try_model.ipynb
src/watermark/: __init__.py  applier.py  config.py  examples.py  schemas.py  utils.py  watermark.py
src/watermark/data/: dataset.py
src/watermark/models/unet/: model.py  model_parts.py
