[tool.poetry]
name = "watermark"
version = "0.0.1"
description = "A short description of the project."
authors = ["TJ"]
# Use identifier from https://spdx.org/licenses/
license = "MIT"
readme = "README.md"
packages = [
    { include = "watermark", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^3.0.0"
pandas = "^1.2.0"
jupyterlab_git = "^0.23.3"
jupyterlab_widgets = "3.0.0"
numpy = "^1.23.2"
pre-commit = "3.0.4"
pytorch-lightning = "1.9.1"
datasets = {extras=["vision"], version= "2.9.0"}
pydantic = "1.10.4"
mlflow = "2.1.1"
torch = "1.13.1"
torchvision = "0.14.1"
llvmlite = "0.39.1"
numba = "0.56.4"


[tool.poetry.group.dev.dependencies]
bandit = "^1.6.2"
black = "^22.0"
bump2version = "^1.0.1"
isort= "^5.0.8"
flake8 = "^5.0.4"
jedi-language-server = "^0.22.0"
pylint = "^2.6.0"
pytest = "^7.0.1"
pytest-cov = "^3.0"
pytest-xdist = "^2.5.0"
vulture = "^2.3"
mypy = "^0.982"


[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
target-version = ['py38']

[tool.pytest.ini_options]
# Example
filterwarnings = [
    "ignore::DeprecationWarning:moto.*:",
    "ignore::DeprecationWarning:boto.*:",
]
